[gd_scene load_steps=10 format=2]

[ext_resource path="res://actors/player/sprites/eye_sheet.png" type="Texture" id=1]
[ext_resource path="res://actors/player/sprites/wand_sheet.png" type="Texture" id=2]
[ext_resource path="res://actors/player/player.gd" type="Script" id=3]
[ext_resource path="res://actors/Actor.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/player/sprites/player_sheet.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/BodyPivot/Eyes:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 2, -14 ), Vector2( 2, -15 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/BodyPivot/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/BodyPivot/Eyes:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 2, -15 ), Vector2( 2, -14 ), Vector2( 2, -15 ), Vector2( 2, -14 ) ]
}

[sub_resource type="RectangleShape2D" id=3]
resource_local_to_scene = true
extents = Vector2( 4, 2 )

[sub_resource type="RectangleShape2D" id=4]
resource_local_to_scene = true
extents = Vector2( 4, 8 )

[node name="Player" instance=ExtResource( 4 )]
script = ExtResource( 3 )

[node name="AnimationPlayer" parent="." index="0"]
anims/idle = SubResource( 1 )
anims/walk = SubResource( 2 )

[node name="Body" parent="Pivot/BodyPivot" index="0"]
texture = ExtResource( 5 )
hframes = 6

[node name="Eyes" type="Sprite" parent="Pivot/BodyPivot" index="1"]
texture = ExtResource( 1 )
offset = Vector2( 2, -14 )
hframes = 3

[node name="WeaponPivot" type="YSort" parent="Pivot" index="1"]
position = Vector2( 0, -12 )

[node name="Weapon" type="Sprite" parent="Pivot/WeaponPivot" index="0"]
position = Vector2( 13, 0 )
texture = ExtResource( 2 )

[node name="AttackPoint" type="Position2D" parent="Pivot/WeaponPivot/Weapon" index="0"]
position = Vector2( 0, -8 )

[node name="Pushbox" parent="." index="2"]
shape = SubResource( 3 )

[node name="AttackCooldown" type="Timer" parent="." index="3"]
wait_time = 0.1
one_shot = true

[node name="Hurtbox" parent="." index="4"]
collision_layer = 128

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 4 )

[editable path="Hurtbox"]
